# Red_Team_Code_Snippets

./: Readme.md
Assembly/: Readme.md
Assembly/Linx86-64/: Readme.md
Assembly/Winx32/: Readme.md  hellow.asm  hellow.lst
Assembly/Winx64/: Readme.md
C#/: Readme.md
C#/CreateProcess/: CreateProcess.sln
C#/Ordinal/: message_box_ordinal.sln
C#/PInvoke/: PInvoke.sln
C/code_exec/: system.c
C/custom_payload/: Readme.md  call_me  call_me.asm  call_me.assembly  call_me_2.bak  dump.txt  system.c
C/meterpreter/: Readme.md  meterpreter_re_me_x64.c  meterpreter_re_me_x86.c  patchmeup_meterpreter.c
C/rsrc_injection/: Readme.md  implant.cpp
C/undetectable/: compile.bat  keylogger.h  undetectable.c
Cpp/: rsrc_injection
Cpp/badAsm/: badAsm.exe.stackdump  main.cpp  main_better.cpp  main_rx.cpp
Cpp/bad_fn_ptr/: bad_fn_ptr.sln
Cpp/call_stack/: compile.bat  main_dirty.cpp  payload.asm
Cpp/clean_stacks/: baseline.cpp  implant.cpp  implant_backup_1.cpp  implant_backup_2.cpp  payload.asm  ramp.asm
Cpp/crypter/: compile.bat  main.cpp  out.txt
Cpp/deceiving_defender/: Readme.md
Cpp/hidden_mimikatz/: Readme.md
Cpp/making_malware/: Readme.md
Cpp/message_box/: message_box.cpp
Cpp/recursion_off_the_disk/: Readme.md
Cpp/rsrc_injection/: implant.cpp  xorencrypt.py
Cpp/rsrc_injection_shell/: Readme.md  compile.bat  implant.cpp  resources.res
Powershell/: amsi-patch.ps1
Python/: Readme.md  out.txt  smuggler.py
Python/PushingP/: pushingpayloads.py  pushingpayloadsv3.py  pyxor.py
Python/smuggler/: Readme.md  smuggler.py
Python/utilities/: Readme.md  beautify.py  xorencrypt.py
Rust/CreateProcessA/: Cargo.toml  main.rs
Rust/pe_fart/: main.rs
Rust/peruns_fart/: Cargo.toml  main.rs
Rust/rust_implantv1/: main.rs
Rust/rust_implantv2/: Cargo.toml  main.rs
Rust/rust_implantv4/: Cargo.toml  main.rs
Rust/rusty_calc/: Cargo.toml  main-original.rs  main.rs
(+145 files in other folders)
