[package]
name = "peruns_fart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys = "0.0.0"
winapi = {version = "0.3.9", features=[
    "winnt",
    "memoryapi",
    "errhandlingapi",
    "processthreadsapi",
    "synchapi",
    "winbase",
    "handleapi",
    "libloaderapi",
    "minwinbase",
    "heapapi"
]}
windows = { version = "*", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security"
] }
windows-sys = { version = "*", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Memory"
] }


